[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="http://www.cinibytes.com/article-image-0-450-66/img-siddharth-abhimanyu-to-reprise-in-telugu.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
