--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="http://www.cinibytes.com/article-image-0-450-66/img-siddharth-abhimanyu-to-reprise-in-telugu.jpg" class="img-medium"/>
+            <img src="https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-1/p160x160/14572905_1117647848313796_8401701043150513692_n.jpg?oh=527e4107563430a7a3c4c4066088983a&oe=58CE2F96" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
