--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            The name's Siddharth Abhimanyu. Good luck.
+            Vikas Subramaniam
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
