--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Vikas Subramaniam
         </div>
+        <div class="fb">
+            <img src="https://www.facebook.com/images/fb_icon_325x325.png">
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
