[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Vikas Subramaniam
+            Vikas
         </div>
         <div class="center">
             <a href="http://www.facebook.com/vikas.subramaniam"> 
