--- a/ui/index.html
+++ b/ui/index.html
@@ -16,6 +16,7 @@
         <div class="Alignleft">
             About me:
         </div>
+        <div class="push"></div>
         <footer class="site-footer">
         <div class="center">
             <a href="http://www.facebook.com/vikas.subramaniam"> 
