[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,8 +13,8 @@
             Vikas
         </div>
         <br>
-        <div class="Alignleft">
-            About me:
+        <div class="center">
+            Lazy IITian in a crazy world. Music, Movies, Cricket, Food and Travel lover.
         </div>
         <div class="push"></div>
         <footer class="footer">
