--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,10 @@
         <br>
         <div class="center">
             Lazy IITian in a crazy world. Music, Movies, Cricket, Food and Travel lover.
+            A few articles written by me:
+            1. Life at a new IIT
+            2. Cracking JEE from Hyderabad
+            3. Effect of increasing number of Engineers on India
         </div>
         <div class="push"></div>
         <footer class="footer">
