[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,9 +16,11 @@
         <div class="center">
             Lazy IITian in a crazy world. Music, Movies, Cricket, Food and Travel lover.
            <p> A few articles written by me:</p>
-            1. Life at a new IIT
-            2. Cracking JEE from Hyderabad
-            3. Effect of increasing number of Engineers on India
+           <ol type="1">
+            <li>Life at a new IIT</li>
+            <li>Cracking JEE from Hyderabad</li>
+            <li>Effect of increasing number of Engineers on India</li>
+            </ol>
         </div>
         <div class="push"></div>
         <footer class="footer">
