[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,11 +16,11 @@
         <div class="center">
             Lazy IITian in a crazy world. Music, Movies, Cricket, Food and Travel lover.
            <p> A few articles written by me:</p>
-           <ol type="1">
-            <li>Life at a new IIT</li>
-            <li>Cracking JEE from Hyderabad</li>
-            <li>Effect of increasing number of Engineers on India</li>
-            </ol>
+           <ul>
+            <li>1.Life at a new IIT</li>
+            <li>2.Cracking JEE from Hyderabad</li>
+            <li>3.Effect of increasing number of Engineers on India</li>
+            </ul>
         </div>
         <div class="push"></div>
         <footer class="footer">
