[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,11 +16,9 @@
         <div class="center">
             Lazy IITian in a crazy world. Music, Movies, Cricket, Food and Travel lover.
            <p> A few articles written by me:</p>
-           <ul>
-            <li>1.Life at a new IIT</li>
-            <li>2.Cracking JEE from Hyderabad</li>
-            <li>3.Effect of increasing number of Engineers on India</li>
-            </ul>
+            <p>1.Life at a new IIT</p>
+            <p>2.Cracking JEE from Hyderabad</p>
+            <p>3.Effect of increasing number of Engineers on India</p>
         </div>
         <div class="push"></div>
         <footer class="footer">
