[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,9 +16,10 @@
         <div class="center">
             Lazy IITian in a crazy world. Music, Movies, Cricket, Food and Travel lover.
            <p> A few articles written by me:</p>
-            <p>1.Life at a new IIT</p>
-            <p>2.Cracking JEE from Hyderabad</p>
-            <p>3.Effect of increasing number of Engineers on India</p>
+            <a href="https://www.pagalguy.com/news/expect-the-unexpected-from-the-3rd-generation-iit-at-tirupati-38336912">1.Life at a new IIT</a>
+            
+            <a href="https://www.pagalguy.com/news/want-to-crack-jee-hyderabad-is-the-place-to-be-38525236">2.Cracking JEE from Hyderabad</a>
+            <a href="https://www.pagalguy.com/news/how-do-more-engineers-affect-india-39200223">3.Effect of increasing number of Engineers on India</a>
         </div>
         <div class="push"></div>
         <footer class="footer">
