[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,10 +16,11 @@
         <div class="center">
             Lazy IITian in a crazy world. Music, Movies, Cricket, Food and Travel lover.
            <p> A few articles written by me:</p>
-            <a href="https://www.pagalguy.com/news/expect-the-unexpected-from-the-3rd-generation-iit-at-tirupati-38336912">1.Life at a new IIT</a>
-            
-            <a href="https://www.pagalguy.com/news/want-to-crack-jee-hyderabad-is-the-place-to-be-38525236">2.Cracking JEE from Hyderabad</a>
-            <a href="https://www.pagalguy.com/news/how-do-more-engineers-affect-india-39200223">3.Effect of increasing number of Engineers on India</a>
+           <p> <a href="https://www.pagalguy.com/news/expect-the-unexpected-from-the-3rd-generation-iit-at-tirupati-38336912">1.Life at a new IIT</a></p>
+           
+           <p><a href="https://www.pagalguy.com/news/want-to-crack-jee-hyderabad-is-the-place-to-be-38525236">2.Cracking JEE from Hyderabad
+           </a></p>
+           <p><a href="https://www.pagalguy.com/news/how-do-more-engineers-affect-india-39200223">3.Effect of increasing number of Engineers on India</a></p>
         </div>
         <div class="push"></div>
         <footer class="footer">
